@@ -7,7 +7,7 @@ ADD_DEFINITIONS(-DBUILDING_EFL__=1)
 ADD_DEFINITIONS(-DWTF_PLATFORM_EFL=1)
 SET(WTF_PLATFORM_EFL 1)
 
-FIND_PACKAGE(Cairo 1.10 REQUIRED)
+FIND_PACKAGE(Cairo 1.10.2 REQUIRED)
 FIND_PACKAGE(Fontconfig 2.8.0 REQUIRED)
 FIND_PACKAGE(Sqlite REQUIRED)
 FIND_PACKAGE(LibXml2 2.6 REQUIRED)
@@ -18,7 +18,7 @@ FIND_PACKAGE(JPEG REQUIRED)
 FIND_PACKAGE(PNG REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
 
-FIND_PACKAGE(GLIB 2.31.8 REQUIRED COMPONENTS gio gobject gthread)
+FIND_PACKAGE(GLIB 2.33.2 REQUIRED COMPONENTS gio gobject gthread)
 FIND_PACKAGE(LibSoup 2.39.4.1 REQUIRED)
 SET(ENABLE_GLIB_SUPPORT ON)
 
@@ -105,15 +105,15 @@ IF (ENABLE_ECORE_X)
 ENDIF ()
 
 FIND_PACKAGE(Eina 1.2 REQUIRED)
-FIND_PACKAGE(Evas 1.0 REQUIRED)
+FIND_PACKAGE(Evas 1.2 REQUIRED)
 FIND_PACKAGE(Ecore 1.2 COMPONENTS Evas File Input ${ECORE_ADDITIONAL_COMPONENTS})
-FIND_PACKAGE(Edje 1.0 REQUIRED)
+FIND_PACKAGE(Edje 1.2 REQUIRED)
 FIND_PACKAGE(Eeze 1.2 REQUIRED)
-FIND_PACKAGE(Efreet 1.0 REQUIRED)
-FIND_PACKAGE(E_DBus 1.1 COMPONENTS EUKit)
+FIND_PACKAGE(Efreet 1.2 REQUIRED)
+FIND_PACKAGE(E_DBus 1.2 COMPONENTS EUKit)
 
-FIND_PACKAGE(Freetype REQUIRED)
-FIND_PACKAGE(HarfBuzz REQUIRED)
+FIND_PACKAGE(Freetype 2.4.2 REQUIRED)
+FIND_PACKAGE(HarfBuzz 0.9.2 REQUIRED)
 SET(WTF_USE_FREETYPE 1)
 SET(WTF_USE_HARFBUZZ_NG 1)
 ADD_DEFINITIONS(-DWTF_USE_FREETYPE=1)
